--- a/one/pom.xml
+++ b/one/pom.xml
@@ -9,21 +9,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jade</artifactId>
+    <artifactId>one</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
             <version>1.3.0.RELEASE</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>easymock</artifactId>
-            <version>3.4</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
             <scope>test</scope>
+            <version>4.2.3.RELEASE</version>
         </dependency>
 
     </dependencies>
