--- a/one/pom.xml
+++ b/one/pom.xml
@@ -25,6 +25,13 @@
             <version>4.2.3.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.4</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
