add mockito example

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>jade</module>
         <module>one</module>
         <module>wakeup</module>
+        <module>opal</module>
     </modules>
 
     <dependencies>
